<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon"
        android:src="@drawable/logo_wide"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_firebase_lockup"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:padding="10dp"
        android:text="@string/emailpassword_title_text"
        android:textColor="@color/darkgreen"
        android:theme="@style/ThemeOverlay.MyTitleText" />
    <TextView
        android:id="@+id/status"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/signed_out"
        android:theme="@style/ThemeOverlay.MyTextDetail"/>
    <TextView
       android:theme="@style/ThemeOverlay.MyTextDetail"
        android:id="@+id/detail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:text="Firebase User ID: 123456789abc"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/display_image"
        android:src="@drawable/psnacet"
        android:layout_marginBottom="0dp"/>

</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fieldEmail"
                android:layout_weight="1"
                android:layout_gravity="top"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fieldPassword"
                android:layout_below="@id/fieldEmail"
                android:layout_weight="1"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/emailPasswordButtons"
          android:orientation="horizontal"
          android:layout_below="@+id/emailPasswordFields"
          android:paddingRight="16dp"
          android:paddingLeft="16dp">
          <Button
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:id="@+id/emailSignInButton"
              style="@style/Widget.AppCompat.Button.Colored"
              android:layout_weight="1"
              android:text="@string/sign_in"
              android:theme="@style/ThemeOverlay.MyDarkButton"/>
          <Button
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:id="@+id/emailCreateAccountButton"
              style="@style/Widget.AppCompat.Button.Colored"
              android:layout_weight="1"
              android:text="@string/create_account"
              android:theme="@style/ThemeOverlay.MyDarkButton"/>

      </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signedInButtons"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:weightSum="2.0">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:id="@+id/signOutButton"
                style="@style/Widget.AppCompat.Button.Colored"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1.0"
                android:id="@+id/verifyEmailButton"
                android:text="@string/verify_email" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>